<resources>
    <string name="app_name">Currency Converter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="currency_converter_plus">Currency Converter Plus</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="skip">SKIP</string>
    <string name="back">BACK</string>

    <string name="heading_one">Quick &amp; Easy Payments</string>
    <string name="heading_two">Instant Notifications</string>
    <string name="heading_three">Cashless Payment</string>
    <string name="heading_fourth">Pay Anywhere</string>

    <string name="desc_one">Grow your Business By Accepting Card Payments with The New Card Reader</string>
    <string name="desc_two">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="desc_three">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="desc_fourth">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="home">Home\n</string>
    <string name="favorite">Favorite\n</string>
    <string name="news">News\n</string>
    <string name="chart">Chart\n</string>
    <string name="search">Search\n</string>
    <string name="currency_convertor">Currency Convertor</string>
    <string name="select_currency">Select Currency</string>
    <string name="convert_currency">Convert Currency</string>
    <string name="us_dollar">US Dollar</string>
    <string name="_0_00">0.00</string>
    <string name="usd">USD</string>
</resources>