<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="isLoadingLayout"
            type="Boolean" />


        <variable
            name="isLoadingLayout1"
            type="Boolean" />

        <variable
            name="isLoadingSymbol"
            type="Boolean" />


        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".fragments.HomeFragment">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:padding="@dimen/_10sdp">

            <FrameLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_currency"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:padding="@dimen/_10sdp"
                    android:visibility="@{isLoadingLayout?View.GONE:View.VISIBLE,default=visible}">

                    <LinearLayout
                        android:id="@+id/layoutBase"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvCode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="INR"
                            android:textSize="@dimen/_15sdp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/baseline_arrow_drop_down_24" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvBase"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Indian Rupee"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvBaseAmount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0.00"
                            android:textColor="@color/DarkOrange"
                            android:textSize="@dimen/_20sdp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </LinearLayout>

                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="@{isLoadingLayout?View.VISIBLE:View.GONE,default=gone}" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout"
                android:animateLayoutChanges="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/background_currency"
                    android:orientation="horizontal"
                    android:padding="@dimen/_10sdp"
                    android:visibility="@{isLoadingLayout1?View.GONE:View.VISIBLE,default=visible}">

                    <LinearLayout
                        android:id="@+id/layoutBase1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="bottom"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvCode1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/usd"
                            android:textSize="@dimen/_15sdp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/baseline_arrow_drop_down_24" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/tvBaseAmount1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_0_00"
                            android:textSize="@dimen/_20sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvBase1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/us_dollar"
                            android:textStyle="bold" />

                    </LinearLayout>
                </LinearLayout>

                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="@{isLoadingLayout1?View.VISIBLE:View.GONE,default=gone}" />

            </FrameLayout>


            <ImageButton
                android:id="@+id/btnChange"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout"
                android:layout_marginStart="@dimen/_20sdp"
                android:background="@drawable/background_change"
                android:contentDescription="@string/currency_convertor"
                android:src="@drawable/baseline_change_circle_24" />


        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:animateLayoutChanges="true"
            tools:ignore="InefficientWeight">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:visibility="@{isLoadingSymbol?View.GONE:View.VISIBLE,default=visible}" />

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="@{isLoadingSymbol?View.VISIBLE:View.GONE,default=gone}" />

        </FrameLayout>


    </LinearLayout>
</layout>